blueprints/orion-security-svc.archived/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orion-security-svc
  labels:
    app: orion-security-svc
    component: security
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3013
      protocol: TCP
      name: http
  selector:
    app: orion-security-svc
---
apiVersion: v1
kind: Service
metadata:
  name: orion-security-svc-nodeport
  labels:
    app: orion-security-svc
    component: security
spec:
  type: NodePort
  ports:
    - port: 3013
      targetPort: 3013
      protocol: TCP
      name: http
      nodePort: 30130
  selector:
    app: orion-security-svc
